add "Arrange icons" submenu to the context menu

Allow the user to change icon flow in an icon view using the context menu.

BUG:306537